[gd_scene load_steps=9 format=3 uid="uid://cjyl78b8oqo5a"]

[ext_resource type="Script" path="res://Scripts/Items/Extractor_Tool_Script.gd" id="1_j8em4"]
[ext_resource type="Material" uid="uid://c21ejtwwfibec" path="res://Materials/Test/MT_test_black.tres" id="3_yky2e"]
[ext_resource type="Material" uid="uid://cllpuobcbn1m7" path="res://Materials/Tools/MT_laser.tres" id="4_7lnwr"]
[ext_resource type="Material" uid="uid://dph5t22057fld" path="res://Materials/Test/MT_test_orange.tres" id="4_kadxa"]
[ext_resource type="PackedScene" uid="uid://cboevmluhe4ao" path="res://Materials/Particle_End_Laser.tscn" id="5_77so6"]
[ext_resource type="AudioStream" uid="uid://bvju1tdtbfvci" path="res://Audio/Player/continuous_beam_1_Loop.mp3" id="7_vxa5x"]

[sub_resource type="BoxMesh" id="BoxMesh_6jirl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_cviky"]

[node name="Extractor_Tool" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.358666, 1.14167, -0.381617)
script = ExtResource("1_j8em4")
damage = 5.0

[node name="Mesh" type="Node3D" parent="."]

[node name="Gun" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.216476, 0, 0, 0, 0.216476, 0, 0, 0, 0.63834, 0.0809662, 0.0292885, -0.307502)
material_override = ExtResource("3_yky2e")
mesh = SubResource("BoxMesh_6jirl")
skeleton = NodePath("../../testSkin")

[node name="Gun2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.300929, 0, 0, 0, 0.300929, 0, 0, 0, 0.395775, 0.0809662, 0.0292885, -0.174426)
material_override = ExtResource("4_kadxa")
mesh = SubResource("BoxMesh_6jirl")
skeleton = NodePath("../../testSkin")

[node name="Bullet_Point" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0787917, 0.036092, -0.675674)

[node name="Laser" type="Node3D" parent="."]

[node name="Laser_Mesh" type="Node3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.625398)

[node name="MeshRenderer3D" type="MeshInstance3D" parent="Laser/Laser_Mesh"]
transform = Transform3D(0.138034, 0, 0, 0, -1.7229e-07, -0.138034, 0, 3.94154, -6.03366e-09, 0.0867003, 0.0192168, -3.95863)
material_override = ExtResource("4_7lnwr")
mesh = SubResource("CylinderMesh_cviky")
skeleton = NodePath("../../Raycast")

[node name="Raycast" type="RayCast3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0852975, 0.0197794, -0.62871)
target_position = Vector3(0, -8, 0)

[node name="ParticleEndLaser" parent="Laser" instance=ExtResource("5_77so6")]

[node name="LaserLoop" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_vxa5x")
volume_db = -10.0

[node name="ExtractorTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="ExtractorTimer" to="." method="_on_extractor_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
